Just fixing some issues

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <title>Parker Sheldon</title>
-		<link rel="icon" href="favicon.png">
         <script src="code.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
         <link href="style.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
         <meta name="keywords" content="Th3Skeleton TheSkeletonGam3r KirbyAllStar">
         <meta name="description" content="Th3Skeleton's Website">
         <meta charset="UTF-8">
@@ -22,7 +21,7 @@
             </center>
              <h2 class="Info">Info About Me</h2>
             <hr>
-            <p>Hi, I'm Parker. I'm also known as Pshel and Th3Skeleton 💀 on Steam. I love to code, make videos and play games. This site was made to show some of my creations.</p>
+            <p>Hi, I'm Parker. I'm also known as Pshel and Th3Skeleton 💀 on Steam. I am a self-taught programmer that loves to code, make videos and play games. This site was made to show some of my creations and to let you guys try them.</p>
             	<b>More Creations Coming Soon...</b>
             <hr>
             	<h2 id="cre">Creations</h2>
