--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <hr>
             <br>
             	<h3>pchat</h3>
-            <p class="pchat"><a target="_blank" href="https://web.editey.com/1B-8CTb6nVLmOt4NDxlwRpaUXgXY2rwuV/index.html"><b>PChat</b></a> is a chat room made with Socket.io. Chat with your friends with a very easy and simple to use chat room. You hit the "Click Here to Find a Chat Room" button, type in your username
-                and share your url to your friends to talk with them online! Check it out at: <a target="_blank" href="https://web.editey.com/1B-8CTb6nVLmOt4NDxlwRpaUXgXY2rwuV/index.html">https://tiny.cc/pchat</a>
+            <p class="pchat"><a target="_blank" href="https://th3skeleton.github.io/pchat/"><b>PChat</b></a> is a chat room made with Socket.io. Chat with your friends with a very easy and simple to use chat room. You hit the "Click Here to Find a Chat Room" button, type in your username
+                and share your url to your friends to talk with them online! Check it out at: <a target="_blank" href="https://th3skeleton.github.io/pchat/">https://th3skeleton.github.io/pchat/</a>
             </p>
             <img class="emu" src="https://web.editey.com/1sj5PjFyjSUVeJeoeKgfr2HZ97JecybaQ/img/new-emurealm.png" alt="Logo" style="width:50%">
             <p class="emu"><a target="_blank" href="https://tiny.cc/newemurealm"><b>NEW EMUREALM</b></a> is a game site with your favorite flash and emulation games. This website has systems from the NES to the DS while also having some classic games like Mario & Pokemon.
