--- a/index.html
+++ b/index.html
@@ -21,19 +21,23 @@
             </center>
              <h2 class="Info">Info About Me</h2>
             <hr>
-            <p>Hi, I'm Parker. I'm also known as Pshel and Th3Skeleton 💀 on Steam. I am a self-taught programmer that loves to code, make videos and play games. This site was made to show some of my creations and to let you guys try them.</p>
+            <p>Hi, I'm Parker. I'm also known as Pshel and Th3Skeleton 💀 on <a class="name" target="_blank" href="https://steamcommunity.com/id/TheSkeletonGam3r">Steam</a>. I am a self-taught programmer that loves to code, make videos and play games. I love retro games from the 3rd generation and I love hacking/modding them to make them a little better. The real main purpose of this site is to show my creations to the world.</p>
             	<b>More Creations Coming Soon...</b>
             <hr>
             	<h2 id="cre">Creations</h2>
             <hr>
             <br>
             	<h3>pchat</h3>
-            <p class="pchat"><a target="_blank" href="https://th3skeleton.github.io/pchat/"><b>PChat</b></a> is a chat room made with Socket.io. Chat with your friends with a very easy and simple to use chat room. You hit the "Click Here to Find a Chat Room" button, type in your username
-                and share your url to your friends to talk with them online! Check it out at: <a target="_blank" href="https://th3skeleton.github.io/pchat/">https://th3skeleton.github.io/pchat/</a>
+            <p class="pchat"><a class="links" target="_blank" href="https://th3skeleton.github.io/pchat/"><b>PChat</b></a> is a chat room made with Socket.io. Chat with your friends with a very easy and simple to use chat room. You hit the "Click Here to Find a Chat Room" button, type in your username
+                and share your url to your friends to talk with them online! Check it out at: <a class="links" target="_blank" href="https://th3skeleton.github.io/pchat/">https://th3skeleton.github.io/pchat/</a>
             </p>
             <img class="emu" src="https://web.editey.com/1sj5PjFyjSUVeJeoeKgfr2HZ97JecybaQ/img/new-emurealm.png" alt="Logo" style="width:50%">
-            <p class="emu"><a target="_blank" href="https://tiny.cc/newemurealm"><b>NEW EMUREALM</b></a> is a game site with your favorite flash and emulation games. This website has systems from the NES to the DS while also having some classic games like Mario & Pokemon.
-                Check it out at: <a target="_blank" href="https://tiny.cc/newemurealm">https://tiny.cc/newemurealm</a>
+            <p class="emu"><a class="links" target="_blank" href="https://tiny.cc/newemurealm"><b>NEW EMUREALM</b></a> is a game site with your favorite flash & emulation games. This website has systems from the NES to the DS while also having some classic games like Mario & Pokemon.
+                Check it out at: <a class="links" target="_blank" href="https://tiny.cc/newemurealm">https://tiny.cc/newemurealm</a>
+            </p>
+            <img class="shs" src="https://cdn.glitch.com/0a222ae6-5b19-407d-aa28-e1164adb0b11%2Fthumbnails%2Fshsgames.png" alt="Logo" style="width:32.3%">
+            <p class="shs"><a class="links" target="_blank" href="https://shsgames.herokuapp.com/"><b>SHS Games</b></a> is a game site with your favorite flash and emulation games. This website has 100+ games on it, easy to use setup and was developed with <a class="name" target="_blank" href="https://joshmerlino.github.io/">Josh Merlino</a>. Come and Join our pointless <a class="name" target="_blank" href="https://discord.gg/tVZjdMe">Discord Server</a>.
+                Check it out at: <a class="links" target="_blank" href="https://shsgames.herokuapp.com/">https://shsgames.herokuapp.com/</a>
             </p>
         </div>
         <footer class="social-footer">
@@ -42,21 +46,21 @@
             </div>
             <div class="social-footer-icons">
                 <ul class="menu simple">
-                    <li><a href="https://steamcommunity.com/id/TheSkeletonGam3r"><i class="fab fa-steam" aria-hidden="true"></i></a>
+                    <li><a target="_blank" href="https://steamcommunity.com/id/TheSkeletonGam3r"><i class="fab fa-steam" aria-hidden="true"></i></a>
                     </li>
-                    <li><a href="https://www.instagram.com/psh3l/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+                    <li><a target="_blank" href="https://www.instagram.com/psh3l/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
                     </li>
-                    <li><a href="https://github.com/pshel"><i class="fab fa-github" aria-hidden="true"></i></a>
+                    <li><a target="_blank" href="https://github.com/pshel"><i class="fab fa-github" aria-hidden="true"></i></a>
                     </li>
-                    <li><a href="https://www.youtube.com/c/TheSketetonGam3r"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+                    <li><a target="_blank" href="https://www.youtube.com/c/TheSketetonGam3r"><i class="fab fa-youtube" aria-hidden="true"></i></a>
                     </li>
-                    <li><a href="https://twitch.tv/p_shel" target="_blank"><i class="fab fa-twitch"></i></a>
+                    <li><a target="_blank" href="https://twitch.tv/p_shel" target="_blank"><i class="fab fa-twitch"></i></a>
                     </li>
-                    <li><a href="https://open.spotify.com/user/a3tbi6nohcmwbopj79l9ob9rf" target="_blank"><i class="fab fa-spotify"></i></a>
+                    <li><a target="_blank" href="https://open.spotify.com/user/a3tbi6nohcmwbopj79l9ob9rf" target="_blank"><i class="fab fa-spotify"></i></a>
                     </li>
-                    <li><a href="https://www.reddit.com/user/Th3Skeleton" target="_blank"><i class="fab fa-reddit"></i></a>
+                    <li><a target="_blank" href="https://www.reddit.com/user/Th3Skeleton" target="_blank"><i class="fab fa-reddit"></i></a>
                     </li>
-                    <li><a href="https://discord.gg/WUzdNFf" target="_blank"><i class="fab fa-discord"></i></a>
+                    <li><a target="_blank" href="https://discord.gg/WUzdNFf" target="_blank"><i class="fab fa-discord"></i></a>
                     </li>
                 </ul>
             </div>
