--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>
                     <li><a target="_blank" href="https://www.instagram.com/psh3l/"><i class="fab fa-instagram" aria-hidden="true"></i></a>
                     </li>
-                    <li><a target="_blank" href="https://github.com/pshel"><i class="fab fa-github" aria-hidden="true"></i></a>
+                    <li><a target="_blank" href="https://github.com/Th3Skeleton"><i class="fab fa-github" aria-hidden="true"></i></a>
                     </li>
                     <li><a target="_blank" href="https://www.youtube.com/c/TheSketetonGam3r"><i class="fab fa-youtube" aria-hidden="true"></i></a>
                     </li>
